# Trading-Programs

Indicators_V2/: Cargo.toml  README.md
Indicators_V2/src/: backtest.rs  divergence.rs  exchange.rs  history.rs  indicators.rs  levels.rs  main.rs  patterns.rs  signal.rs
RB_Trading/Formula/: .env  INSTALL.md  README.md  TROUBLESHOOTING.md  base.sql  cex_api.py  config.py  db_stats.py  env.example  fix_permissions.sql  main.py  rb_formula.py  requirements.txt  roger_formula.py  timezone_utils.py  unified_formula.py
RB_Trading/Formula/automation/: AUTOMATION_GUIDE.md  README.md  auto_monitor.py  monitor.py  notifier.py  telegram_notifier.py  trade_journal.py  trading_system.py
