[package]
name = "trading_bot"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "trading_bot"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
